# yanel_dsp

./: Cargo.toml  README.md  dsp_buddy.nix  dsp_buddy_cbindgen.toml  yanel_dsp.h
examples/: freeverb.rs  simple_delay.rs
examples/gtk_app_deps/: audio_thread.rs  mod.rs
examples/gtk_modules/: freeverb.rs  mod.rs  simple_delay.rs
src/: ffi.rs  freeverb.rs  lib.rs  simple_delay.rs  synth_kick.rs
src/compressor/: ffi.rs  mod.rs
src/freeverb/: ffi.rs  mod.rs
src/multi_filter/: ffi.rs  mod.rs
src/simple_delay/: ffi.rs  mod.rs
src/synth_kick/: ffi.rs  mod.rs
