[package]
name = "yanel_dsp"
version = "0.1.0"
authors = ["backtail <mail@maxgenson.de>"]
edition = "2021"

[dependencies]
embedded-audio-tools = { git = "https://github.com/backtail/embedded-audio-tools.git" }

# for dev
# embedded-audio-tools = { path = "../embedded-audio-tools" }

[features]
default = [ "SR48k" ]
SR44k1 = []
SR48k = []
SR88k2 = []
SR96k = []
SR192k = []
