[package]
name = "yanel_dsp"
version = "0.1.0"
authors = ["backtail <mail@maxgenson.de>"]
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
# embedded-audio-tools = { git = "https://github.com/backtail/embedded-audio-tools.git" }

embedded-audio-tools = { path = "../embedded-audio-tools" } # for dev

[features]
# static lib requires no_std envirnoment
static = ["embedded-audio-tools/no_std"]
